argocd-apps/egress-web-api-service/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress-web-api-service
  namespace: image-gen
  labels:
    app: egress-web-api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egress-web-api-service
  template:
    metadata:
      labels:
        app: egress-web-api-service
    spec:
      containers:
        - name: egress-web-api-service
          image: 192.168.2.102:5000/image-gen-egress-web-api-service:0.3
