argocd-apps/egress-web-api-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: egress-service
  namespace: image-gen
spec:
  selector:
    app: egress-web-api-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
